--- a/force-app/main/default/lwc/portfolioFooter/portfolioFooter.html
+++ b/force-app/main/default/lwc/portfolioFooter/portfolioFooter.html
@@ -6,22 +6,32 @@
             <div class="footer-primary">
                 <!-- Brand Section -->
                 <div class="footer-brand">
-                    <a 
-                        href="/"
-                        class="brand-link"
-                        onclick={handleBrandClick}
-                        aria-label="Go to homepage"
-                    >
-                        <template lwc:if={hasLogo}>
-                            <img 
-                                src={logoUrl} 
-                                alt={logoAltText}
-                                class="brand-logo"
-                                loading="lazy"
-                            />
-                        </template>
-                        <span class="brand-name">{brandName}</span>
-                    </a>
+                    <div class="brand-header">
+                        <a 
+                            href="/"
+                            class="brand-link"
+                            onclick={handleBrandClick}
+                            aria-label="Go to homepage"
+                        >
+                            <template lwc:if={hasLogo}>
+                                <img 
+                                    src={logoUrl} 
+                                    alt={logoAltText}
+                                    class="brand-logo"
+                                    loading="lazy"
+                                />
+                            </template>
+                            <span class="brand-name">{brandName}</span>
+                        </a>
+                        <!-- Work Authorization Badge -->
+                        <div class="authorization-badge">
+                            <svg class="badge-icon" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                            </svg>
+                            <span class="badge-text">U.S. Citizen</span>
+                        </div>
+                    </div>
                     <p class="brand-tagline">{tagline}</p>
                 </div>
 
